--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Dancing+Script:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Dancing+Script:wght@500&family=Lobster&display=swap');
 
 
 body{
@@ -7,13 +7,14 @@ body{
     background-color: #659DB8;
 }
 
+nav{
+    max-height: 65px;
+}
+
 .custom-nav{
     font-size: 1.65em;
 }
 
-.ul.a:hover{
-    color:red;
-}
 h2{
     font-family: 'Dancing Script', cursive;
     font-size: x-large;
@@ -38,6 +39,20 @@ h2{
 
 .row-content{
     margin: 50px 0px;
+}
+
+.error{
+    display: flex;
+    flex-direction: column;
+    color:#ff0000;
+    font-size: 5vh;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Lobster', cursive;
+}
+.error h1{
+    font-size: 10vh;
+    font-weight: 200;
 }
 
 footer{
