--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Dancing+Script:wght@500&family=Lobster&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body{
     padding: 59.48px 0px 0px 0px;
@@ -27,6 +32,10 @@ h2{
 
 .nav-item{
     margin:0px 10px;
+}
+
+.carousel-caption{
+    color: whitesmoke;
 }
 
 .main-container{
