--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 0.4em;
+    width: 0em;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -19,13 +19,9 @@
 }
 
 body{
-    padding: 59.48px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
     z-index:0;
     background-color: #9BA4B4;
-}
-
-nav{
-    max-height: 50px;
 }
 
 h2{
@@ -34,8 +30,13 @@ h2{
     font-size: xx-large;
 }
 
+li{
+    padding: 0 5px;
+}
+
 .navColor{
     background-color: #14274E;
+    padding: 5px;
 }
 
 .cardColor{
